--- a/index.html
+++ b/index.html
@@ -1,139 +1,97 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <title>Графік прибирань — кв. 10–13</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8">
+<title>Графік прибирань</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+body { background-color:#1e1e2f; color:#f0f0f5; font-family:sans-serif;}
+button:hover { opacity:0.8; transition:0.2s; }
+input { background:#2a2a40; color:#f0f0f5; border:none; border-radius:4px; padding:4px 6px;}
+input:disabled { background:#1a1a2a; color:#888; }
+</style>
 </head>
-<body class="bg-gray-100 text-gray-900">
-  <div class="max-w-6xl mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-4">Графік прибирань — кв. 10, 11, 12, 13</h1>
+<body class="flex items-center justify-center min-h-screen">
+<div id="login-screen" class="w-96 p-6 bg-gray-800 rounded-2xl shadow-lg">
+  <h1 class="text-2xl font-bold mb-4 text-center">Вхід за квартирою</h1>
+  <input id="apt" type="number" placeholder="Номер квартири" class="w-full mb-2"/><br>
+  <input id="pass" type="password" placeholder="Пароль" class="w-full mb-4"/><br>
+  <button id="loginBtn" class="w-full py-2 bg-purple-600 rounded-2xl text-white font-semibold">Увійти</button>
+</div>
 
-    <!-- Панель входу -->
-    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-6">
-      <script>
-        const flats = [10, 11, 12, 13];
-        document.write(flats.map(n => `
-          <div class="bg-white rounded-2xl shadow p-4">
-            <div class="flex items-center gap-2 mb-2">
-              <span class="text-lg font-semibold">Кв. ${n}</span>
-              <span id="status-${n}" class="text-xs px-2 py-1 rounded bg-gray-200">гость</span>
-            </div>
-            <div class="flex gap-2">
-              <input id="pass-${n}" type="password" placeholder="пароль" class="w-full border rounded px-3 py-2" />
-              <button data-apt="${n}" class="btn-login px-3 py-2 rounded bg-gray-900 text-white">Увійти</button>
-            </div>
-          </div>`).join(""));
-      </script>
-    </div>
-
-    <!-- Кнопки -->
-    <div class="flex flex-wrap items-center gap-2 mb-4">
-      <button id="add-row" class="px-4 py-2 rounded-2xl bg-white shadow border">Додати рядок</button>
-      <button id="save-all" class="px-4 py-2 rounded-2xl bg-gray-900 text-white shadow">Зберегти мій стовпець</button>
-    </div>
-
-    <!-- Таблиця -->
-    <div class="bg-white rounded-2xl shadow overflow-x-auto">
-      <table id="schedule" class="min-w-full border-collapse">
-        <thead class="bg-gray-800 text-white">
-          <tr>
-            <th class="px-3 py-2 border">Дата</th>
-            <th class="px-3 py-2 border">Квартира №10</th>
-            <th class="px-3 py-2 border">Квартира №11</th>
-            <th class="px-3 py-2 border">Квартира №12</th>
-            <th class="px-3 py-2 border">Квартира №13</th>
-          </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-      </table>
-    </div>
-
-    <p class="mt-3 text-sm text-gray-600">Дані зберігаються у <code>schedule.txt</code> біля цього файлу.</p>
+<div id="main-screen" class="hidden flex-col w-11/12 max-w-4xl">
+  <div class="flex justify-between items-center mb-4 mt-4">
+    <h1 class="text-2xl font-bold">Графік прибирань</h1>
+    <button id="addBtn" class="px-4 py-2 bg-green-600 rounded-2xl font-semibold">Додати запис</button>
   </div>
+  <table class="min-w-full border-collapse">
+    <thead class="bg-gray-700 text-white">
+      <tr>
+        <th class="px-4 py-2 border">Дата</th>
+        <th class="px-4 py-2 border">Квартира</th>
+        <th class="px-4 py-2 border">Текст</th>
+        <th class="px-4 py-2 border">Дія</th>
+      </tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
+</div>
 
 <script>
-const tbody = document.getElementById('tbody');
-const addRowBtn = document.getElementById('add-row');
-const saveAllBtn = document.getElementById('save-all');
-const loginBtns = document.querySelectorAll('.btn-login');
+let token=null;
+let apt=null;
+const loginScreen=document.getElementById('login-screen');
+const mainScreen=document.getElementById('main-screen');
+const tbody=document.getElementById('tbody');
 
-let session = { apt: null, token: null };
+async function loadData(){
+  const r=await fetch('/api/load');
+  const data=await r.json();
+  tbody.innerHTML='';
+  data.forEach((row,i)=>{
+    const tr=document.createElement('tr');
+    tr.innerHTML=`
+      <td class="border px-2 py-1">${row.date}</td>
+      <td class="border px-2 py-1">${row.apt}</td>
+      <td class="border px-2 py-1">
+        <input type="text" class="w-full" value="${row.text}" ${row.author===apt?'':'disabled'}>
+      </td>
+      <td class="border px-2 py-1 flex gap-1">
+        ${row.author===apt?'<button class="updateBtn bg-blue-600 px-2 rounded text-white">Зберегти</button><button class="delBtn bg-red-600 px-2 rounded text-white">Видалити</button>':''}
+      </td>`;
+    tbody.appendChild(tr);
 
-function makeRow(date='', a10='', a11='', a12='', a13='') {
-  const tr = document.createElement('tr');
-  tr.innerHTML = `
-    <td class="border px-2 py-1"><input type="date" class="date-input w-full" value="${date}"/></td>
-    <td class="border px-2 py-1"><input data-col="10" class="cell w-full p-1" value="${a10}" /></td>
-    <td class="border px-2 py-1"><input data-col="11" class="cell w-full p-1" value="${a11}" /></td>
-    <td class="border px-2 py-1"><input data-col="12" class="cell w-full p-1" value="${a12}" /></td>
-    <td class="border px-2 py-1"><input data-col="13" class="cell w-full p-1" value="${a13}" /></td>
-  `;
-  tbody.appendChild(tr);
-  applyLocks();
-}
-
-function applyLocks() {
-  const inputs = tbody.querySelectorAll('input.cell');
-  inputs.forEach(inp => {
-    const col = inp.getAttribute('data-col');
-    inp.disabled = !(session.apt && String(session.apt) === col);
-    inp.classList.toggle('bg-gray-100', inp.disabled);
-  });
-  [10,11,12,13].forEach(n => {
-    const badge = document.getElementById('status-'+n);
-    if (session.apt == n) {
-      badge.textContent = 'увійшов';
-      badge.className = 'text-xs px-2 py-1 rounded bg-green-200 text-green-800';
-    } else {
-      badge.textContent = 'гость';
-      badge.className = 'text-xs px-2 py-1 rounded bg-gray-200';
+    if(row.author===apt){
+      tr.querySelector('.updateBtn').onclick=async ()=>{
+        const val=tr.querySelector('input').value;
+        await fetch('/api/update',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({token,index:i,text:val})});
+        loadData();
+      };
+      tr.querySelector('.delBtn').onclick=async ()=>{
+        await fetch('/api/delete',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({token,index:i})});
+        loadData();
+      };
     }
   });
 }
 
-async function loadData() {
-  const r = await fetch('/api/load');
-  const text = await r.text();
-  const lines = text.trim().split(/\r?\n/).slice(1);
-  tbody.innerHTML = '';
-  if (!lines.length) return makeRow();
-  lines.forEach(line => {
-    const [d,a10,a11,a12,a13] = line.split(';');
-    makeRow(d,a10,a11,a12,a13);
-  });
-}
-
-addRowBtn.onclick = () => makeRow();
-
-loginBtns.forEach(btn=>{
-  btn.onclick = async e=>{
-    const apt = e.target.getAttribute('data-apt');
-    const pass = document.getElementById('pass-'+apt).value;
-    const r = await fetch('/api/login',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({apt,password:pass})});
-    const data = await r.json();
-    if(data.ok){
-      session = {apt:Number(apt),token:data.token};
-      applyLocks();
-      alert('Вхід успішний');
-    } else alert('Пароль невірний');
-  };
-});
-
-saveAllBtn.onclick = async ()=>{
-  if(!session.token) return alert('Увійдіть!');
-  const rows=[];
-  tbody.querySelectorAll('tr').forEach(tr=>{
-    const date=tr.querySelector('.date-input').value;
-    const val=tr.querySelector('[data-col="'+session.apt+'"]').value;
-    if(date) rows.push({date,value:val});
-  });
-  const r = await fetch('/api/save',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({token:session.token,apt:session.apt,rows})});
-  const d=await r.json();
-  if(d.ok){alert('Збережено'); loadData();}
+document.getElementById('loginBtn').onclick=async ()=>{
+  const a=document.getElementById('apt').value;
+  const p=document.getElementById('pass').value;
+  const r=await fetch('/api/login',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({apt:a,password:p})});
+  const data=await r.json();
+  if(data.ok){
+    token=data.token; apt=data.apt;
+    loginScreen.classList.add('hidden');
+    mainScreen.classList.remove('hidden');
+    loadData();
+  } else alert('Невірний пароль');
 };
 
-loadData();
+document.getElementById('addBtn').onclick=async ()=>{
+  await fetch('/api/add',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({token})});
+  loadData();
+};
 </script>
 </body>
 </html>
