--- a/index.html
+++ b/index.html
@@ -6,45 +6,44 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
-body {
-  background: #f0f4f8;
-  font-family: 'Poppins', sans-serif;
-}
-button { transition: all 0.2s ease; cursor: pointer; }
+body { background: #f0f4f8; font-family: 'Poppins', sans-serif; }
+button { transition: 0.2s; cursor: pointer; }
 button:hover { transform: scale(1.05); }
-input { background:#ffffffaa; color:#111; border:none; border-radius:6px; padding:6px 8px; transition:0.2s; text-align:center; }
+input { background:#ffffffaa; color:#111; border:none; border-radius:6px; padding:6px 8px; text-align:center; transition:0.2s; }
 input:disabled { background:#e5e7eb; color:#6b7280; }
 tr:hover { background: rgba(0,0,0,0.05); }
 .icon-btn { display:flex; align-items:center; justify-content:center; width:30px; height:30px; border-radius:50%; background:#ef4444; color:white; font-weight:bold; }
 </style>
 </head>
-<body class="flex flex-col items-center pt-8 min-h-screen">
+<body class="flex flex-col items-center pt-6 min-h-screen">
 
 <!-- Логін -->
-<div id="login-screen" class="w-96 p-8 bg-white rounded-3xl shadow-2xl">
-  <h1 class="text-2xl font-bold mb-6 text-gray-800 text-center">Вхід за квартирою</h1>
-  <input id="apt" type="number" placeholder="Номер квартири" class="w-full mb-3"/><br>
-  <input id="pass" type="password" placeholder="Пароль" class="w-full mb-5"/><br>
+<div id="login-screen" class="w-full max-w-sm p-6 bg-white rounded-3xl shadow-2xl">
+  <h1 class="text-2xl font-bold mb-5 text-gray-800 text-center">Вхід за квартирою</h1>
+  <input id="apt" type="number" placeholder="Номер квартири" class="w-full mb-3"/>
+  <input id="pass" type="password" placeholder="Пароль" class="w-full mb-5"/>
   <button id="loginBtn" class="w-full py-3 bg-blue-500 rounded-3xl font-semibold text-white">Увійти</button>
 </div>
 
-<!-- Таблиця -->
-<div id="main-screen" class="hidden flex-col w-11/12 max-w-4xl">
-  <div class="flex justify-between items-center mb-4">
-    <h1 class="text-2xl font-bold text-gray-800">Графік прибирань</h1>
-    <button id="logoutBtn" class="px-3 py-1 bg-red-500 rounded-full font-semibold text-white">Вийти</button>
+<!-- Головна таблиця -->
+<div id="main-screen" class="hidden flex-col w-full max-w-4xl px-2 sm:px-4 lg:px-8">
+  <div class="flex flex-col sm:flex-row justify-between items-center mb-3">
+    <h1 class="text-2xl font-bold text-gray-800 mb-2 sm:mb-0">Графік прибирань</h1>
+    <button id="logoutBtn" class="w-full sm:w-auto px-4 py-2 bg-red-500 rounded-full font-semibold text-white">Вийти</button>
   </div>
+
   <div class="flex justify-end mb-2">
-    <button id="addBtn" class="px-4 py-1 bg-green-500 rounded-full font-semibold text-white">Додати запис</button>
+    <button id="addBtn" class="w-full sm:w-auto px-4 py-2 bg-green-500 rounded-full font-semibold text-white">Додати запис</button>
   </div>
+
   <div class="overflow-x-auto rounded-2xl shadow-xl">
-    <table class="min-w-full border-collapse text-gray-800">
+    <table class="min-w-full table-auto text-gray-800">
       <thead class="bg-gray-200">
         <tr>
-          <th class="px-5 py-3 border text-center">Дата</th>
-          <th class="px-5 py-3 border text-center">Квартира</th>
-          <th class="px-5 py-3 border text-center">Текст</th>
-          <th class="px-5 py-3 border text-center"></th>
+          <th class="px-2 sm:px-4 py-2 border text-center">Дата</th>
+          <th class="px-2 sm:px-4 py-2 border text-center">Квартира</th>
+          <th class="px-2 sm:px-4 py-2 border text-center">Текст</th>
+          <th class="px-2 sm:px-4 py-2 border text-center"></th>
         </tr>
       </thead>
       <tbody id="tbody" class="bg-white"></tbody>
@@ -59,7 +58,6 @@ const loginScreen = document.getElementById('login-screen');
 const mainScreen = document.getElementById('main-screen');
 const tbody = document.getElementById('tbody');
 
-// Завантажити та відобразити записи
 async function loadData() {
   const r = await fetch('/api/load');
   const data = await r.json();
@@ -68,14 +66,17 @@ async function loadData() {
     const tr = document.createElement('tr');
     const isOwner = row.author === apt;
     tr.className = i % 2 === 0 ? 'bg-white' : 'bg-gray-50';
+    const date = row.date || '';
+    const aptNum = row.apt || '';
+    const text = row.text || '';
     tr.innerHTML = `
-      <td class="border px-4 py-2 text-center">${row.date}</td>
-      <td class="border px-4 py-2 text-center">${row.apt}</td>
-      <td class="border px-4 py-2 text-center">
-        <input type="text" class="w-full p-1 rounded text-center" value="${row.text}" ${isOwner ? '' : 'disabled'}>
+      <td class="border px-2 sm:px-4 py-2 text-center break-words">${date}</td>
+      <td class="border px-2 sm:px-4 py-2 text-center break-words">${aptNum}</td>
+      <td class="border px-2 sm:px-4 py-2 text-center break-words">
+        <input type="text" class="w-full sm:w-auto p-2 rounded text-center" value="${text}" ${isOwner?'':'disabled'}>
       </td>
-      <td class="border px-4 py-2 flex justify-center">
-        ${isOwner ? '<button class="delBtn icon-btn">🗑️</button>' : ''}
+      <td class="border px-2 sm:px-4 py-2 flex justify-center">
+        ${isOwner?'<button class="delBtn icon-btn">🗑️</button>':''}
       </td>`;
     tbody.appendChild(tr);
 
@@ -84,7 +85,7 @@ async function loadData() {
       input.addEventListener('input', async () => {
         await fetch('/api/update', {
           method: 'POST',
-          headers: { 'Content-Type':'application/json' },
+          headers: {'Content-Type':'application/json'},
           body: JSON.stringify({token, index:i, text: input.value})
         });
       });
@@ -101,7 +102,6 @@ async function loadData() {
   });
 }
 
-// Логін
 async function doLogin(a, p){
   const r = await fetch('/api/login', {
     method:'POST',
@@ -144,7 +144,6 @@ document.getElementById('addBtn').onclick = async () => {
   loadData();
 };
 
-// Автовхід якщо токен збережено
 if(token && apt){
   loginScreen.classList.add('hidden');
   mainScreen.classList.remove('hidden');
