--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>Таблиця прибирань Бальзака 86 – 2 поверх</title>
+<title>Таблиця прибирань </title>
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
@@ -29,7 +29,7 @@ tr:hover { background: rgba(0,0,0,0.05); }
 
 <div id="main-screen" class="hidden flex-col w-11/12 max-w-4xl">
   <div class="flex justify-between items-center mb-4">
-    <h1 class="text-2xl font-bold text-gray-800">Графік прибирань</h1>
+    <h1 class="text-2xl font-bold text-gray-800">Таблиця прибирань Бальзака 86 – 2 поверх</h1>
     <button id="logoutBtn" class="px-3 py-1 bg-red-500 rounded-full font-semibold text-white">Вийти</button>
   </div>
   <div class="flex justify-end mb-2">
